syntax = "proto3";

package communicationpatterns.bidirguessnumber;

option java_multiple_files = true;
option java_package = "com.example.communicationpatterns.bidirguessnumber";

message GuessRequest {
  int32 guess = 1;
}

enum Result {
  CORRECT = 0;
  TOO_LOW = 1;
  TOO_HIGH = 2;
}

message GuessResponse {
  int32 attempt = 1;
  Result result = 2;
}

service GuessNumber {
  rpc MakeGuess(stream GuessRequest) returns (stream GuessResponse);
}
